--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ crispy-bootstrap4==2022.1
 crispy-bootstrap5==0.7
 distlib==0.3.7
 dj-database-url==2.0.0
-Django==4.1.6
+Django>=4.1.10
 django-cors-headers==4.1.0
 django-crispy-forms==2.0
 django-dotenv==1.4.2
