--- a/requirements.txt
+++ b/requirements.txt
@@ -52,7 +52,7 @@ PyYAML==6.0
 requests==2.31.0
 signals==0.0.2
 six==1.16.0
-sqlparse==0.4.3
+sqlparse>=0.4.4
 swagger-spec-validator==3.0.3
 typing_extensions==4.6.3
 tzdata==2022.7
