--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,11 @@ itypes==1.2.0
 Jinja2==3.1.2
 jsonschema==4.17.3
 MarkupSafe==2.1.3
+mysql==0.0.3
+mysql-connector==2.2.9
+mysql-connector-python==8.0.33
+mysql-connector-python-rf==2.2.2
+mysqlclient==2.2.0
 numpy==1.24.1
 openpyxl==3.1.0
 packaging==23.1
